# PA-APP

./: package-lock.json  package.json  parse_dsa.py  pnpm-lock.yaml
app/: globals.css  layout.tsx  page.tsx
app/ai-engineer/: page.tsx
app/auth/: page.tsx
app/aws/: page.tsx
app/dsa/: page.tsx
app/fde/: page.tsx
app/finance/: page.tsx
app/git-github/: page.tsx
app/github-actions/: page.tsx
components/: ErrorToaster.tsx  QuickCapture.tsx
hooks/: useAie.ts  useAws.ts  useAwsChat.ts  useCalendar.ts  useCoursePlanner.ts  useDSA.ts  useFde.ts  useFdeChat.ts  useFinance.ts  useGha.ts  useGit.ts  useGmail.ts  useNotes.ts  usePlanner.ts  usePrompts.ts  useSysdes.ts
lib/: aie-roadmap.ts  auth.ts  aws-roadmap.ts  calendar.ts  course-plan.ts  courses-registry.ts  db.ts  fde-roadmap.ts  gemini.ts  gha-roadmap.ts  git-roadmap.ts  gmail.ts  groq.ts  notifications.ts  seed.ts  serpapi.ts  sysdes-roadmap.ts  utils.ts
public/: questions.json
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs
src-tauri/src/commands/: auth.rs
src-tauri/src/db/: init.rs
store/: aieStore.ts  authStore.ts  awsStore.ts  calendarCacheStore.ts  coursePlannerStore.ts  dsaStore.ts  errorStore.ts  fdeStore.ts  financeStore.ts  ghaStore.ts  gitStore.ts  gmailCacheStore.ts  notesStore.ts  plannerStore.ts  promptStore.ts  settingsStore.ts  sysdesStore.ts
types/: aie.ts  auth.ts  aws.ts  courseplan.ts  dsa.ts  fde.ts  finance.ts  gha.ts  git.ts  index.ts  notes.ts  planner.ts  prompt.ts
(+81 files in other folders)
